src/main/java/com/example/Demo/errors/exception/InvalidFileTypeException.java
package com.example.Demo.errors.exception;

public class InvalidFileTypeException extends RuntimeException {
    public InvalidFileTypeException(String message) {
        super(message);
    }
}
